<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/ivMood"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:srcCompat="@mipmap/ic_launcher_round"
        android:contentDescription="@string/obrazek" />

    <TextView
        android:id="@+id/tvPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:clickable="true"
        android:gravity="center_vertical|center_horizontal"
        android:textSize="18sp"
        android:visibility="invisible"
        android:focusable="true" />

    <TextView
        android:id="@+id/tvAdres"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:clickable="true"
        android:gravity="center_vertical|center_horizontal"
        android:textSize="18sp"
        android:visibility="invisible"
        android:focusable="true" />

    <TextView
        android:id="@+id/tvWebsite"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:clickable="true"
        android:gravity="center_vertical|center_horizontal"
        android:textSize="18sp"
        android:visibility="invisible"
        android:focusable="true" />

    <TextView
        android:id="@+id/tvContactsApp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:gravity="center_horizontal"
        android:textSize="24sp"
        android:textStyle="bold"
        android:visibility="visible"
        tools:text="@string/ContactsApp" />

    <Button
        android:id="@+id/btnCreateNewContact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:background="@color/colorPrimary"
        android:text="@string/button"
        android:textColor="#FFFFFF"
        tools:text="Create @string/createNewContact" />

</LinearLayout>